# AnyRope

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: iterators.rs  queries.rs  remove.rs
examples/: graphemes_iter.rs  graphemes_step.rs  search_and_replace.rs  simple_buffer.rs
src/: iter.rs  lib.rs  rope.rs  rope_builder.rs  slice.rs  slice_utils.rs
src/tree/: branch_children.rs  leaf_slice.rs  mod.rs  node.rs  node_children.rs  node_text.rs  slice_info.rs  text_info.rs
tests/: fix_tree.rs  from_slice.rs  lifetimes.rs  proptest_tests.rs  shrink_to_fit.rs  small_random_inserts.rs
