[package]
name = "any-rope"
version = "1.0.0"
authors = ["Mateus Yoshiaki <ahoyiski@gmail.com>"]
description = "A fast and robust arbitrary rope for Rust. Based on Ropey."
documentation = "https://docs.rs/any-ropey"
repository = "https://github.com/AhoyISki/any-ropey"
readme = "README.md"
license = "MIT"
keywords = ["rope", "data", "edit", "buffer"]
categories = ["data-structures"]
exclude = ["/design/*", "/benches/*.txt", "/fuzz/**", "/.github/*"]
edition = "2021"

[dependencies]
smallvec = "1.10.0"

[dev-dependencies]
rand = "0.8"
proptest = "1.0"
criterion = { version = "0.3", features = ["html_reports"] }
unicode-segmentation = "1.3"
fnv = "1"
fxhash = "0.2"

[build]
rustdocflags = ["--cfg", "test"]
