[package]
name = "any-rope"
version = "1.1.0"
authors = ["Mateus Yoshiaki <ahoyiski@gmail.com>"]
description = "A fast and robust arbitrary rope for Rust. Based on Ropey."
documentation = "https://docs.rs/any-rope"
repository = "https://github.com/AhoyISki/AnyRope"
readme = "README.md"
license = "MIT"
keywords = ["rope", "data", "edit", "buffer"]
categories = ["data-structures"]
exclude = ["/.github/*"]
edition = "2021"

[dependencies]
smallvec = "1.10.0"

[dev-dependencies]
rand = "0.8"
